--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "webview-simple",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "main": "main.js",
+  "scripts": {
+    "start": "electron ."
+  },
+  "license": "MIT",
+  "dependencies": {
+    "electron": "^9.0.0"
+  }
 }
